// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataEntry ballot interaction renders ballot route 1`] = `
<div>
  <div
    class="sc-iAyFgw jNbEKw"
  >
    <div
      class="sc-hSdWYo sc-eHgmQL PYaig"
    >
      <div
        class="sc-kEYyzF koCczG"
      >
        <h1
          class="bp3-heading sc-hMqMXs kwaZrg"
        >
          Audit Board #1
          : Ballot Card Data Entry
        </h1>
        <h3
          class="bp3-heading"
        >
          Enter Ballot Information
        </h3>
        <div
          class="bp3-callout sc-kkGfuU crQZD"
        >
          Auditing ballot 
          2
           of 
          27
        </div>
        <div
          class="sc-gqjmRU kTzBLL"
        >
          <div
            class="ballot-side"
          >
            <h4
              class="bp3-heading"
            >
              Current ballot:
            </h4>
            <div>
              Tabulator: 
              11
            </div>
            <div>
              Batch: 
              0003-04-Precinct 19 (Jonesboro Fire Department)
            </div>
            <div>
              Record/Position: 
              2112
            </div>
          </div>
          <div
            class="bp3-divider sc-gZMcBi jbSoiK"
          />
          <div
            class="ballot-main"
          >
            <h4
              class="bp3-heading"
            >
              Are you looking at the correct ballot?
            </h4>
            <p>
              Before continuing, check the "Current ballot" information to make sure you are entering data for the correct ballot. If the ballot could not be found, click "Ballot not found" below and move on to the next ballot.
            </p>
            <p>
              <button
                class="bp3-button bp3-intent-danger"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Ballot 
                  2112
                   not found - move to next ballot
                </span>
              </button>
            </p>
            <p>
              <a
                class="bp3-button bp3-intent-primary"
                href="/election/1/audit-board/audit-board-1"
              >
                Return to audit overview
              </a>
            </p>
          </div>
        </div>
        <div
          class="sc-gqjmRU kTzBLL"
        >
          <div
            class="ballot-side"
          />
          <div
            class="ballot-main"
          >
            <h4
              class="bp3-heading"
            >
              Instructions
            </h4>
            <p>
              Select 
              <strong>
                all
              </strong>
               the candidates/choices below that you see marked on the paper ballot.
            </p>
            <p>
              If the voter did not vote in the contest, select "Blank vote."
            </p>
            <p>
              If this contest is not shown on this ballot, select "Not on ballot."
            </p>
            <form>
              <div
                class="sc-VigVT eBCusi"
              >
                <h3
                  class="bp3-heading"
                >
                  Contest 1
                </h3>
                <div
                  class="bp3-divider sc-gZMcBi jbSoiK"
                />
                <label
                  class="bp3-control bp3-checkbox sc-ckVGcZ feFhx"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="undefined bp3-control-indicator"
                  >
                    <span
                      class="checkbox-text"
                    >
                      Choice One
                    </span>
                  </span>
                </label>
                <label
                  class="bp3-control bp3-checkbox sc-ckVGcZ feFhx"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="undefined bp3-control-indicator"
                  >
                    <span
                      class="checkbox-text"
                    >
                      Choice Two
                    </span>
                  </span>
                </label>
                <label
                  class="bp3-control bp3-checkbox sc-ckVGcZ feFhx"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="gray bp3-control-indicator"
                  >
                    <span
                      class="checkbox-text"
                    >
                      Blank vote
                    </span>
                  </span>
                </label>
                <label
                  class="bp3-control bp3-checkbox sc-ckVGcZ feFhx"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="gray bp3-control-indicator"
                  >
                    <span
                      class="checkbox-text"
                    >
                      Not on Ballot
                    </span>
                  </span>
                </label>
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Add comment
                  </span>
                </button>
              </div>
              <div
                class="sc-VigVT eBCusi"
              >
                <h3
                  class="bp3-heading"
                >
                  Contest 2
                </h3>
                <div
                  class="bp3-divider sc-gZMcBi jbSoiK"
                />
                <label
                  class="bp3-control bp3-checkbox sc-ckVGcZ feFhx"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="undefined bp3-control-indicator"
                  >
                    <span
                      class="checkbox-text"
                    >
                      Choice Three
                    </span>
                  </span>
                </label>
                <label
                  class="bp3-control bp3-checkbox sc-ckVGcZ feFhx"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="undefined bp3-control-indicator"
                  >
                    <span
                      class="checkbox-text"
                    >
                      Choice Four
                    </span>
                  </span>
                </label>
                <label
                  class="bp3-control bp3-checkbox sc-ckVGcZ feFhx"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="gray bp3-control-indicator"
                  >
                    <span
                      class="checkbox-text"
                    >
                      Blank vote
                    </span>
                  </span>
                </label>
                <label
                  class="bp3-control bp3-checkbox sc-ckVGcZ feFhx"
                >
                  <input
                    type="checkbox"
                  />
                  <span
                    class="gray bp3-control-indicator"
                  >
                    <span
                      class="checkbox-text"
                    >
                      Not on Ballot
                    </span>
                  </span>
                </label>
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-edit"
                    icon="edit"
                  >
                    <svg
                      data-icon="edit"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        edit
                      </desc>
                      <path
                        d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Add comment
                  </span>
                </button>
              </div>
              <div
                class="sc-fjdhpX hGGYTz"
              >
                <button
                  class="bp3-button bp3-intent-success sc-iwsKbI drSRDt"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Review
                  </span>
                </button>
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Back
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataEntry ballot interaction renders board table with ballots 1`] = `
<div>
  <div
    class="sc-iAyFgw jNbEKw"
  >
    <div
      class="sc-hSdWYo sc-eHgmQL PYaig"
    >
      <div
        class="board-table-container"
      >
        <h1
          class="bp3-heading"
        >
          Audit Board #1
          : Ballot Cards to Audit
        </h1>
        <p>
          The following ballots have been assigned to your audit board for this round of the audit. Once these ballots have been located and retrieved from storage, click "Start Auditing" to begin recording the votes you see marked on the paper ballots. When you are finished auditing these ballots, click "Auditing Complete - Submit Results" to submit the results.
           
          <strong>
            Note that you will not be able to make changes after results are submitted.
          </strong>
        </p>
        <div
          class="sc-bxivhb hKbymO"
        >
          <div
            class="sc-ifAKCX imHVNF"
          >
            <span
              class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audited: 
                18
              </span>
            </span>
            <span
              class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Not Audited: 
                9
              </span>
            </span>
          </div>
          <div
            class="sc-EHOje jRMUiN"
          >
            <button
              class="bp3-button"
              href="/election/1/audit-board/audit-board-1/batch/batch-id-1/ballot/2112"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Start Auditing
              </span>
            </button>
            <button
              class="bp3-button bp3-disabled"
              disabled=""
              href="/election/1/audit-board/audit-board-1/signoff"
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Auditing Complete - Submit Results
              </span>
            </button>
          </div>
        </div>
        <table
          class="sc-bdVaJa djjOKa"
          role="table"
        >
          <thead>
            <tr>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Tabulator"
              >
                <div
                  style="display: flex; align-items: center; padding-right: 15px;"
                >
                  <span
                    style="margin-right: 5px;"
                  >
                    Tabulator
                  </span>
                  <span>
                    <span
                      class="bp3-icon bp3-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        data-icon="double-caret-vertical"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          double-caret-vertical
                        </desc>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Batch"
              >
                <div
                  style="display: flex; align-items: center; padding-right: 15px;"
                >
                  <span
                    style="margin-right: 5px;"
                  >
                    Batch
                  </span>
                  <span>
                    <span
                      class="bp3-icon bp3-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        data-icon="double-caret-vertical"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          double-caret-vertical
                        </desc>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Ballot Position"
              >
                <div
                  style="display: flex; align-items: center; padding-right: 15px;"
                >
                  <span
                    style="margin-right: 5px;"
                  >
                    Ballot Position
                  </span>
                  <span>
                    <span
                      class="bp3-icon bp3-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        data-icon="double-caret-vertical"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          double-caret-vertical
                        </desc>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Status"
              >
                <div
                  style="display: flex; align-items: center; padding-right: 15px;"
                >
                  <span
                    style="margin-right: 5px;"
                  >
                    Status
                  </span>
                  <span>
                    <span
                      class="bp3-icon bp3-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        data-icon="double-caret-vertical"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          double-caret-vertical
                        </desc>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-1/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-1/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-2/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-2/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-3/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-3/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-4/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-4/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-5/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-5/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-6/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-6/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-7/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-7/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-8/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-8/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-9/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-9/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataEntry ballot interaction renders board table with no ballots 1`] = `
<div>
  <div
    class="sc-iAyFgw jNbEKw"
  >
    <div
      class="sc-hSdWYo sc-eHgmQL PYaig"
    >
      <div
        class="board-table-container"
      >
        <h1
          class="bp3-heading"
        >
          Audit Board #1
          : Ballot Cards to Audit
        </h1>
        <p>
          The following ballots have been assigned to your audit board for this round of the audit. Once these ballots have been located and retrieved from storage, click "Start Auditing" to begin recording the votes you see marked on the paper ballots. When you are finished auditing these ballots, click "Auditing Complete - Submit Results" to submit the results.
           
          <strong>
            Note that you will not be able to make changes after results are submitted.
          </strong>
        </p>
        <div
          class="sc-bxivhb hKbymO"
        >
          <div
            class="sc-ifAKCX imHVNF"
          >
            <span
              class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audited: 
                0
              </span>
            </span>
            <span
              class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Not Audited: 
                0
              </span>
            </span>
          </div>
          <div
            class="sc-EHOje jRMUiN"
          >
            <button
              class="bp3-button bp3-disabled"
              disabled=""
              href="/"
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Start Auditing
              </span>
            </button>
            <button
              class="bp3-button"
              href="/election/1/audit-board/audit-board-1/signoff"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Auditing Complete - Submit Results
              </span>
            </button>
          </div>
        </div>
        <table
          class="sc-bdVaJa djjOKa"
          role="table"
        >
          <thead>
            <tr>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Batch"
              >
                <div
                  style="display: flex; align-items: center; padding-right: 15px;"
                >
                  <span
                    style="margin-right: 5px;"
                  >
                    Batch
                  </span>
                  <span>
                    <span
                      class="bp3-icon bp3-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        data-icon="double-caret-vertical"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          double-caret-vertical
                        </desc>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Ballot Position"
              >
                <div
                  style="display: flex; align-items: center; padding-right: 15px;"
                >
                  <span
                    style="margin-right: 5px;"
                  >
                    Ballot Position
                  </span>
                  <span>
                    <span
                      class="bp3-icon bp3-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        data-icon="double-caret-vertical"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          double-caret-vertical
                        </desc>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Status"
              >
                <div
                  style="display: flex; align-items: center; padding-right: 15px;"
                >
                  <span
                    style="margin-right: 5px;"
                  >
                    Status
                  </span>
                  <span>
                    <span
                      class="bp3-icon bp3-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        data-icon="double-caret-vertical"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          double-caret-vertical
                        </desc>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          />
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataEntry member form submits and goes to ballot table 1`] = `
<div>
  <div
    class="sc-iAyFgw jNbEKw"
  >
    <div
      class="sc-hSdWYo sc-eHgmQL PYaig"
    >
      <div
        class="board-table-container"
      >
        <h1
          class="bp3-heading"
        >
          Audit Board #1
          : Ballot Cards to Audit
        </h1>
        <p>
          The following ballots have been assigned to your audit board for this round of the audit. Once these ballots have been located and retrieved from storage, click "Start Auditing" to begin recording the votes you see marked on the paper ballots. When you are finished auditing these ballots, click "Auditing Complete - Submit Results" to submit the results.
           
          <strong>
            Note that you will not be able to make changes after results are submitted.
          </strong>
        </p>
        <div
          class="sc-bxivhb hKbymO"
        >
          <div
            class="sc-ifAKCX imHVNF"
          >
            <span
              class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audited: 
                18
              </span>
            </span>
            <span
              class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Not Audited: 
                9
              </span>
            </span>
          </div>
          <div
            class="sc-EHOje jRMUiN"
          >
            <button
              class="bp3-button"
              href="/election/1/audit-board/audit-board-1/batch/batch-id-1/ballot/2112"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Start Auditing
              </span>
            </button>
            <button
              class="bp3-button bp3-disabled"
              disabled=""
              href="/election/1/audit-board/audit-board-1/signoff"
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Auditing Complete - Submit Results
              </span>
            </button>
          </div>
        </div>
        <table
          class="sc-bdVaJa djjOKa"
          role="table"
        >
          <thead>
            <tr>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Tabulator"
              >
                <div
                  style="display: flex; align-items: center; padding-right: 15px;"
                >
                  <span
                    style="margin-right: 5px;"
                  >
                    Tabulator
                  </span>
                  <span>
                    <span
                      class="bp3-icon bp3-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        data-icon="double-caret-vertical"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          double-caret-vertical
                        </desc>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Batch"
              >
                <div
                  style="display: flex; align-items: center; padding-right: 15px;"
                >
                  <span
                    style="margin-right: 5px;"
                  >
                    Batch
                  </span>
                  <span>
                    <span
                      class="bp3-icon bp3-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        data-icon="double-caret-vertical"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          double-caret-vertical
                        </desc>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Ballot Position"
              >
                <div
                  style="display: flex; align-items: center; padding-right: 15px;"
                >
                  <span
                    style="margin-right: 5px;"
                  >
                    Ballot Position
                  </span>
                  <span>
                    <span
                      class="bp3-icon bp3-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        data-icon="double-caret-vertical"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          double-caret-vertical
                        </desc>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </th>
              <th
                colspan="1"
                role="columnheader"
                style="cursor: pointer;"
                title="Status"
              >
                <div
                  style="display: flex; align-items: center; padding-right: 15px;"
                >
                  <span
                    style="margin-right: 5px;"
                  >
                    Status
                  </span>
                  <span>
                    <span
                      class="bp3-icon bp3-icon-double-caret-vertical"
                      icon="double-caret-vertical"
                    >
                      <svg
                        data-icon="double-caret-vertical"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          double-caret-vertical
                        </desc>
                        <path
                          d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-1/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-1/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-2/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-2/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-3/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-3/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-4/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-4/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-5/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-5/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-6/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-6/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-7/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-7/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-8/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-8/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 13 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                313
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-9/ballot/313"
                >
                  Re-audit
                </a>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 19 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                2112
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Not Audited
                  </span>
                </span>
              </td>
            </tr>
            <tr
              role="row"
            >
              <td
                role="cell"
              >
                11
              </td>
              <td
                role="cell"
              >
                0003-04-Precinct 29 (Jonesboro Fire Department)
              </td>
              <td
                role="cell"
              >
                1789
              </td>
              <td
                role="cell"
              >
                <span
                  class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
                >
                  <span
                    class="bp3-text-overflow-ellipsis bp3-fill"
                  >
                    Audited
                  </span>
                </span>
                <a
                  class="bp3-button bp3-small sc-bZQynM iMDvCJ"
                  href="/election/1/audit-board/audit-board-1/batch/batch-id-9/ballot/1789"
                >
                  Re-audit
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
